welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:57: error: not found: value faireV3
faireV3(c: Color)
^PatternPicture:57: error: not found: value c
faireV3(c: Color)
        ^PatternPicture:62: error: not found: value faireV
  faireV(Color.YELLOW)
  ^PatternPicture:63: error: not found: value faireV
  faireV(Color.GREEN)
  ^